--- a/style.css
+++ b/style.css
@@ -622,6 +622,7 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    align-items: center;
   }
   .headers p {
     color: #000000;
